# UberScout

./: .gitignore  CMakeLists.txt  build  main.cpp
assets/web/css/: apps_page.css  main.css  team_listing.css
assets/web/css/apps/: team_modification.css  team_registrar.css
assets/web/html/: home.mdhtml  index.zhtml  team_list.mdhtml
assets/web/html/apps/: ServerControl.mdhtml  team_modification.mdhtml  team_registration.mdhtml  team_scout_score.mdhtml
assets/web/javascript/: AJAX.js  apps_page.js  body_control.js  main.js  navigator.js  team_listing.js
assets/web/javascript/apps/: team_modification.js  team_registrar.js  team_scout_score.js
include/: boot.hxx  database.hxx  file.hxx  host.hxx  server.hxx
source/: boot.cxx  database.cxx  file.cxx  host.cxx  server.cxx
source/server/: server_func.hxx
